--- a/css/viewer.css
+++ b/css/viewer.css
@@ -2,10 +2,24 @@
 body {
 	font: 12px arial, sans-serif;
 }
+/*input[type=range][orient=vertical]
+{
+    -webkit-appearance: slider-vertical;
+    width: 25px;
+    height: 500px;
+
+}*/
 .slidercontainer{
     width: 100%;
 }
-.slider {
+::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #003399;
+    cursor: pointer;
+}
+.horSlider {
     -webkit-appearance: none;
     width: 100%;
     height: 25px;
@@ -15,22 +29,35 @@ body {
     -webkit-transition: .2s;
     transition: opacity .2s;
 }
-.slider::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 25px;
-        height: 25px;
-        background: #4CAF50;
-        cursor: pointer;
+.verSlider {
+    margin-top: 250px;
+    margin-bottom: 250px;
+    margin-left: -200px;
+    -webkit-appearance: none;
+    width: 500px;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    transform: rotate(270deg);
 }
-
-.slider::-moz-range-thumb {
-        width: 25px;
-        height: 25px;
-        background: #4CAF50;
-        cursor: pointer;
-
+.block {
+    display: block;
+    width: 100%;
+    border: none;
+    background-color: #003399;
+    padding: 14px 28px;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;
+    color: white;
 }
-div {
-    margin: 0px;
+.block:hover {
+    background-color: #93c0f2;
+    color: black;
+}
+h1 {
+    text-align: center;
 }
