--- a/css/viewer.css
+++ b/css/viewer.css
@@ -30,11 +30,11 @@ body {
     transition: opacity .2s;
 }
 .verSlider {
-    margin-top: 250px;
-    margin-bottom: 250px;
-    margin-left: -200px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    margin-left: -50px;
     -webkit-appearance: none;
-    width: 500px;
+    width: 200px;
     height: 25px;
     background: #d3d3d3;
     outline: none;
@@ -58,6 +58,12 @@ body {
     background-color: #93c0f2;
     color: black;
 }
+.leftLauncher, .rightLauncher {
+    width: 25%;
+}
+/*#rightDisplay{
+    float: ;
+}*/
 h1 {
     text-align: center;
 }
