--- a/css/viewer.css
+++ b/css/viewer.css
@@ -1,6 +1,6 @@
 
 body {
-	font: 12px arial, sans-serif;
+    font: 12px arial, sans-serif;
 }
 /*input[type=range][orient=vertical]
 {
@@ -19,30 +19,24 @@ body {
     background: #003399;
     cursor: pointer;
 }
-.horSlider {
+
+.leftPowerSlider, .rightPowerSlider{
     -webkit-appearance: none;
-    width: 100%;
+    width: 50%;
     height: 25px;
-    background: #d3d3d3;
+    background: linear-gradient(to right, Green 0%, Yellow 50%, Red 100%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
 }
-.verSlider {
-    margin-top: 100px;
-    margin-bottom: 100px;
-    margin-left: -50px;
-    -webkit-appearance: none;
-    width: 200px;
-    height: 25px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-    transform: rotate(270deg);
+.powerContainer, .powerDisplay {
+    display: flex;
+    justify-content: space-between;
 }
+/*#rightPowerDisplay{
+    align-self: center
+}*/
 .block {
     display: block;
     width: 100%;
@@ -58,8 +52,17 @@ body {
     background-color: #93c0f2;
     color: black;
 }
-.leftLauncher, .rightLauncher {
-    width: 45%;
+.puckNumber {
+    display: flex;
+    justify-content: space-between;
+}
+.slider {
+    display: flex;
+    justify-content: space-between;
+}
+.leftLauncher, .rightLauncher{
+    width: 50%;
+    margin-top: 10px;
 }
 /*#rightDisplay{
     float: ;
@@ -67,3 +70,5 @@ body {
 h1 {
     text-align: center;
 }
+
+/*knob stuff*/
