--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -24,7 +24,7 @@ body {
     -webkit-appearance: none;
     width: 50%;
     height: 25px;
-    background: linear-gradient(to right, blue 0%, Yellow 50%, Red 100%);
+    background: linear-gradient(to right, green 0%, Yellow 50%, Red 100%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
