--- a/public/templates/header.handlebars
+++ b/public/templates/header.handlebars
@@ -1,3 +1,8 @@
-<p><span id="userName">{{ userName }}</span></p>
-<p><span id="totalPucks">Pucks: {{ totalPucks }}</span></p>
-<p><span id="playerScore">Score: {{ playerScore }}</span></p>
+<div id="avatarContainer">
+    <img id="avatarImg" src="{{ avatarUrl }}" />
+</div>
+<div id="userNameContainer">
+    <h1><span id="userName">{{ userName }}</span></h1>
+    <h3><span id="totalPucks">Pucks: {{ totalPucks }}</span></h3>
+    <h3><span id="playerScore">Score: {{ playerScore }}</span></h3>
+</div>
