progress on stylesheets

--- a/public/templates/header.handlebars
+++ b/public/templates/header.handlebars
@@ -3,6 +3,6 @@
 </div>
 <div id="userNameContainer">
     <h1><span id="userName">{{ userName }}</span></h1>
-    <h3><span id="totalPucks">Pucks: {{ totalPucks }}</span></h3>
-    <h3><span id="playerScore">Score: {{ playerScore }}</span></h3>
+    <h3>Pucks: <span id="totalPucks">{{ totalPucks }}</span></h3>
+    <h3>Score: <span id="playerScore">{{ playerScore }}</span></h3>
 </div>
