--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -1,11 +1,44 @@
-
 body {
-    font: 12px arial, sans-serif;
-    background-image: url("scratched_steel_texture_by_aarondesign.jpg");
+    background-color: #02111b;
+    color: rgb(42, 237, 251);
+    text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
 }
 
+h1 {
+    font-weight: 700;
+}
+
+.rs-handle .rs-tooltip .rs-bar {
+    background-color:  #02111b;
+    color: rgb(42, 237, 251);
+    border: solid 1px rgb(42, 237, 251);
+    box-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
+}
+
+/*
 #main {
+    padding: 5px;
+    margin: 2px;
+    height: 375px;
+    background-color: rgba(8, 45, 48, 0.7);
+    border: 2px solid rgb(42, 237, 251);
+    border-radius: 5px;
     clear: both;
+}
+*/
+
+#header {
+    padding: 5px;
+    margin: 2px;
+    /*background-color: rgba(8, 45, 48, 0.7);*/
+    border: 1px solid rgb(42, 237, 251);
+    border-radius: 15px;
+}
+
+#header::after {
+    content: "";
+    clear: both;
+    display: table;    
 }
 
 #avatarContainer {
@@ -15,14 +48,16 @@ body {
 }
 
 #userNameContainer {
-    line-height: normal;
     float: left;
+    line-height: 0.4;
+    margin-left: 10px;
 }
 
 img#avatarImg {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
 }
 
 .slidercontainer{
@@ -32,19 +67,22 @@ img#avatarImg {
     -webkit-appearance: none;
     width: 25px;
     height: 25px;
-    background: #003399;
+    background: rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
     cursor: pointer;
 }
 
 .leftPowerSlider, .rightPowerSlider{
     -webkit-appearance: none;
+    margin-top: 10px;
     width: 50%;
     height: 25px;
-    background: linear-gradient(to right, green 0%, Yellow 50%, Red 100%);
+    background: linear-gradient(to right,#02111b 0%, Red 100%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
 }
 .powerContainer, .powerDisplay {
     display: flex;
@@ -54,12 +92,13 @@ img#avatarImg {
     display: block;
     width: 100%;
     border: none;
-    background-color: #003399;
+    background-color: rgb(42, 237, 251);
     padding: 14px 28px;
     font-size: 18px;
     cursor: pointer;
     text-align: center;
     color: white;
+    text-shadow: 0px 0px 10px rgb(14, 65, 68, 0.8), 0 0 1px rgb(14, 65, 68, 1);
 }
 .block:hover {
     background-color: #93c0f2;
