--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -8,12 +8,28 @@ h1 {
     font-weight: 700;
 }
 
-.rs-handle .rs-tooltip .rs-bar {
-    background-color:  #02111b;
-    color: rgb(42, 237, 251);
+.rs-control .rs-range-color {
+    background-color: #54bbe0;
+}
+.rs-control .rs-path-color {
+    background-color: #02111b;
+}
+.rs-control .rs-handle {
+    background-color: #2aedfb;
     border: solid 1px rgb(42, 237, 251);
     box-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
 }
+.rs-control .rs-bg-color {
+    background-color: #02111b;
+}
+/* 
+.rs-handle .rs-tooltip .rs-bar {
+    background-color:  #02111b;
+    color: #2aedfb;
+    border: solid 1px rgb(42, 237, 251);
+    box-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
+    border: solid 1px rgb(42, 237, 251);
+} */
 
 /*
 #main {
@@ -29,16 +45,38 @@ h1 {
 
 #header {
     padding: 5px;
-    margin: 2px;
+    margin: 5px;
     /*background-color: rgba(8, 45, 48, 0.7);*/
     border: 1px solid rgb(42, 237, 251);
     border-radius: 15px;
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
 }
 
 #header::after {
     content: "";
     clear: both;
     display: table;    
+}
+
+#controlsContainer {
+    margin-bottom: 10px;
+}
+
+#leftLauncherController {
+    float: left;
+}
+
+#rightLauncherController {
+    float: right;
+}
+
+#leftLauncherController, #rightLauncherController {
+    width: 125px;
+    padding: 5px;
+    margin: 5px;
+    /*background-color: rgba(8, 45, 48, 0.7);*/
+    border: 1px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);    
 }
 
 #avatarContainer {
@@ -57,7 +95,7 @@ img#avatarImg {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    box-shadow: 0 0 15px rgba(42, 237, 251, 0.9);
 }
 
 .slidercontainer{
@@ -68,22 +106,52 @@ img#avatarImg {
     width: 25px;
     height: 25px;
     background: rgb(42, 237, 251);
-    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
     cursor: pointer;
+}
+
+input[type=text] {
+    width: 30px;
+    padding: 10px;
+    margin: 10px 0px 10px 0px;
+    font-size: large;
+    color: rgb(42, 237, 251);
+    background-color:  #02111b;
+    border: 1px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
 }
 
 .leftPowerSlider, .rightPowerSlider{
     -webkit-appearance: none;
     margin-top: 10px;
-    width: 50%;
+    width: 100%;
     height: 25px;
     background: linear-gradient(to right,#02111b 0%, Red 100%);
     outline: none;
     opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
+    border: 1px solid rgb(42, 237, 251);
     box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
 }
+
+#puckNumber {
+    height: 100px;
+}
+
+#launchTitle {
+    float:left;
+    clear: both;
+}
+
+#leftLauncher {
+    float: left;
+}
+
+#rightLauncher {
+    float: right;
+}
+
 .powerContainer, .powerDisplay {
     display: flex;
     justify-content: space-between;
