--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -156,7 +156,8 @@ input[type=text] {
     display: flex;
     justify-content: space-between;
 }
-.block {
+
+/* .block {
     display: block;
     width: 100%;
     border: none;
@@ -165,13 +166,41 @@ input[type=text] {
     font-size: 18px;
     cursor: pointer;
     text-align: center;
-    color: white;
+    color: #02111b;
     text-shadow: 0px 0px 10px rgb(14, 65, 68, 0.8), 0 0 1px rgb(14, 65, 68, 1);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
 }
+
 .block:hover {
-    background-color: #93c0f2;
-    color: black;
+    background-color: #02111b;
+    color: rgb(42, 237, 251);
+    text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
+    border: 1px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+} */
+
+.block:hover {      
+    background-color: rgb(42, 237, 251);
+    color: #02111b;
+    text-shadow: 0px 0px 10px rgb(14, 65, 68, 0.8), 0 0 1px rgb(14, 65, 68, 1);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
 }
+
+.block {
+    display: block;
+    width: 100%;
+    margin-top: 10px;  
+    padding: 14px 28px;
+    font-size: 18px;
+    cursor: pointer;
+    text-align: center;    
+    background-color: #02111b;
+    color: rgb(42, 237, 251);
+    text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
+    border: 3px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+}
+
 .puckNumber {
     display: flex;
     justify-content: space-between;
