--- a/public/templates/launch.handlebars
+++ b/public/templates/launch.handlebars
@@ -54,7 +54,7 @@
     </div>
 </div>
 <div class="sendButton">
-    <button type="button" class="block" id="sendButton">Launch Ready</button>
+    <button type="button" class="block" id="sendButton">Launch</button>
 </div>
 <div class="errorMessage">
     <p><span id="error"></span></p>
