--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -8,44 +8,8 @@ h1 {
     font-weight: 700;
 }
 
-.rs-control .rs-range-color {
-    background-color: #54bbe0;
-}
-.rs-control .rs-path-color {
-    background-color: #02111b;
-}
-.rs-control .rs-handle {
-    background-color: #2aedfb;
-    border: solid 1px rgb(42, 237, 251);
-    box-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
-}
-.rs-control .rs-bg-color {
-    background-color: #02111b;
-}
-/* 
-.rs-handle .rs-tooltip .rs-bar {
-    background-color:  #02111b;
-    color: #2aedfb;
-    border: solid 1px rgb(42, 237, 251);
-    box-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
-    border: solid 1px rgb(42, 237, 251);
-} */
-
-/*
-#main {
-    padding: 5px;
-    margin: 2px;
-    height: 375px;
-    background-color: rgba(8, 45, 48, 0.7);
-    border: 2px solid rgb(42, 237, 251);
-    border-radius: 5px;
-    clear: both;
-}
-*/
-
 #header {
     padding: 5px;
-    margin: 5px;
     /*background-color: rgba(8, 45, 48, 0.7);*/
     border: 1px solid rgb(42, 237, 251);
     border-radius: 15px;
@@ -59,7 +23,20 @@ h1 {
 }
 
 #controlsContainer {
-    margin-bottom: 10px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+#launcherImgContainer {
+    height: 70px;
+    margin-top: 25px;
+}
+
+#leftAngleImg, #rightAngleImg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100px;
 }
 
 #leftLauncherController {
@@ -71,10 +48,7 @@ h1 {
 }
 
 #leftLauncherController, #rightLauncherController {
-    width: 125px;
     padding: 5px;
-    margin: 5px;
-    /*background-color: rgba(8, 45, 48, 0.7);*/
     border: 1px solid rgb(42, 237, 251);
     box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);    
 }
@@ -98,18 +72,32 @@ img#avatarImg {
     box-shadow: 0 0 15px rgba(42, 237, 251, 0.9);
 }
 
-.slidercontainer{
-    width: 100%;
-}
-::-webkit-slider-thumb {
+input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 25px;
     height: 25px;
     background: rgb(42, 237, 251);
     box-shadow: 0 0 10px rgba(42, 237, 251, 1);
     cursor: pointer;
-}
+} 
 
+input[type=range]::-moz-range-thumb {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    background: rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+    cursor: pointer;
+} 
+
+input[type=range]::-ms-thumb {
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    background: rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+    cursor: pointer;
+} 
 
 input[type=text] {
     width: 30px;
@@ -122,14 +110,13 @@ input[type=text] {
     box-shadow: 0 0 10px rgba(42, 237, 251, 1);
 }
 
-.leftPowerSlider, .rightPowerSlider{
+.leftPowerSlider, .rightPowerSlider, .leftAngleSlider, .rightAngleSlider {
     -webkit-appearance: none;
-    margin-top: 10px;
+    /* margin-top: 10px; */
     width: 100%;
-    height: 25px;
+    height: 15px;
     background: linear-gradient(to right,#02111b 0%, Red 100%);
     outline: none;
-    opacity: 0.7;
     -webkit-transition: .2s;
     transition: opacity .2s;
     border: 1px solid rgb(42, 237, 251);
@@ -153,32 +140,10 @@ input[type=text] {
     float: right;
 }
 
-.powerContainer, .powerDisplay {
+.powerContainer, .angleContainer, .powerDisplay {
     display: flex;
     justify-content: space-between;
 }
-
-/* .block {
-    display: block;
-    width: 100%;
-    border: none;
-    background-color: rgb(42, 237, 251);
-    padding: 14px 28px;
-    font-size: 18px;
-    cursor: pointer;
-    text-align: center;
-    color: #02111b;
-    text-shadow: 0px 0px 10px rgb(14, 65, 68, 0.8), 0 0 1px rgb(14, 65, 68, 1);
-    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
-}
-
-.block:hover {
-    background-color: #02111b;
-    color: rgb(42, 237, 251);
-    text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
-    border: 1px solid rgb(42, 237, 251);
-    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
-} */
 
 .block:hover {      
     background-color: rgb(42, 237, 251);
@@ -190,8 +155,7 @@ input[type=text] {
 .block {
     display: block;
     width: 100%;
-    margin-top: 10px;  
-    padding: 14px 28px;
+    padding: 7px 14px;
     font-size: 18px;
     cursor: pointer;
     text-align: center;    
@@ -206,14 +170,12 @@ input[type=text] {
     display: flex;
     justify-content: space-between;
 }
-.slider {
-    display: flex;
-    justify-content: space-between;
-}
+
 .leftLauncher, .rightLauncher{
     width: 50%;
     margin-top: 10px;
 }
+
 .errorMessage {
     color: red;
     text-shadow: 0px 0px 6px rgba(255, 0, 0, 0.7);
