little changes to satisfy Twitch's requirements

--- a/public/templates/launch.handlebars
+++ b/public/templates/launch.handlebars
@@ -17,7 +17,7 @@
         </div>
         <div class="puckNumber">
             <div id="launchTitle"><h3>How many?<br/>(50 Max)</h3></div>
-            <input type="text" id="leftLauncher" class="leftLauncher" onkeypress="return AllowNumbersOnly(event)">
+            <input type="text" id="leftLauncher" class="leftLauncher">
         </div>    
     </div>
     <div id="rightLauncherController">
@@ -38,7 +38,7 @@
         </div>
         <div class="puckNumber">
             <div id="launchTitle"><h3>How many?<br/>(50 Max)</h3></div>
-            <input type="text" id="rightLauncher" class="rightLauncher" onkeypress="return AllowNumbersOnly(event)">
+            <input type="text" id="rightLauncher" class="rightLauncher">
         </div>      
     </div>
 </div>
