--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -8,11 +8,18 @@ h1 {
     font-weight: 700;
 }
 
+h2 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 #header {
     padding: 5px;
     border: 1px solid rgb(42, 237, 251);
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    position: sticky;
+    position: -webkit-sticky;
 }
 
 #header::after {
@@ -20,10 +27,44 @@ h1 {
     clear: both;
     display: table;    
 }
+#tabsContainer{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    padding: 5px;
+    border: 1px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    margin-top: 5px;
+    position: sticky;
+}
 
+#tabsContainer div {
+    float: left;
+    display: block;
+    width: 100%;
+    padding: 1px;
+    font-size: 15px;
+    cursor: pointer;
+    text-align: center;
+    background-color: #02111b;
+    color: rgb(42, 237, 251);
+    text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
+    border: 3px solid rgb(42, 237, 251);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+    text-decoration: none;
+}
+#tabsContainer div.active {
+    background-color: rgb(42, 237, 251);
+    color: #02111b;
+    text-shadow: 0px 0px 10px rgb(14, 65, 68, 0.8), 0 0 1px rgb(14, 65, 68, 1);
+    box-shadow: 0 0 10px rgba(42, 237, 251, 1);
+}
 #controlsContainer {
-    margin-top: 7px;
-    margin-bottom: 7px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 #launcherImgContainer {
@@ -38,13 +79,11 @@ h1 {
     width: 100px;
 }
 
-#leftLauncherController {
-    float: left;
+/*#leftLauncherController {
 }
 
 #rightLauncherController {
-    float: right;
-}
+}*/
 
 #leftLauncherController, #rightLauncherController {
     padding: 5px;
@@ -53,13 +92,13 @@ h1 {
     width: 125px;
 }
 
-#avatarContainer {
+#avatarContainer{
     margin: 5px;
     float: left;
     height: 100%;
 }
 
-#userNameContainer {
+#userNameContainer{
     float: left;
     line-height: 0.4;
     margin-left: 10px;
@@ -127,7 +166,7 @@ input[type=text] {
 }
 
 #launchTitle {
-    float:left;
+    float: left;
     clear: both;
 }
 
@@ -155,13 +194,13 @@ input[type=text] {
     display: block;
     width: 100%;
     padding: 7px 14px;
-    font-size: 18px;
+    font-size: 15px;
     cursor: pointer;
     text-align: center;    
     background-color: #02111b;
     color: rgb(42, 237, 251);
     text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
-    border: 3px solid rgb(42, 237, 251);
+    border: 2px solid rgb(42, 237, 251);
     box-shadow: 0 0 10px rgba(42, 237, 251, 1);
 }
 
@@ -178,4 +217,30 @@ input[type=text] {
 .errorMessage {
     color: red;
     text-shadow: 0px 0px 6px rgba(255, 0, 0, 0.7);
+}
+
+.item {
+    display: flex;
+    justify-content: flex-start;
+    padding: 5px;
+    border: 1px solid rgb(42, 237, 251);
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    height: 100px;
+    line-height: normal;
+}
+.item:hover {
+    cursor: pointer;
+}
+#items {
+    display: flex;
+    align-content: flex-start;
+    overflow: scroll;
+}
+::-webkit-scrollbar-track {
+    background: #021130;
+}
+
+::-webkit-scrollbar-thumb {
+    color: rgb(42, 237, 251);
 }
