clear out oauth callback page, don't need it to have anything anymore

--- a/public/templates/authorize.handlebars
+++ b/public/templates/authorize.handlebars
@@ -1,6 +1,1 @@
-<h1>Success</h1>
-<p>Please copy the access token below and paste into Stream Pucks. This will allow you to play the game with viewers on your channel.</p>
-Access token (treat like a password, do not show this to anyone): 
-<input id="tokenField" type="password" value="{{ token }}" />
-<button id="showTokenButton">Show Token</button>
-<button id="copyTokenButton">Copy to Clipboard</button>
+<!-- intentionally left blank -->
