changing words and some styling

--- a/public/templates/store.handlebars
+++ b/public/templates/store.handlebars
@@ -5,7 +5,7 @@
             <div id="trailImgContainer">
                 <img id="trailImg" src="../img/{{ id }}.png" />
                 <div id="purchaseButtonContainer">
-                    <button class="purchaseButton" id="{{ id }}" name="inactivated">Purchase</button>
+                    <button class="purchaseButton" id="{{ id }}" name="inactivated">Use Points</button>
                 </div>
             </div>
             <div id="trailDescriptionContainer">
