--- a/public/css/viewer.css
+++ b/public/css/viewer.css
@@ -4,6 +4,26 @@ body {
     text-shadow: 0px 0px 6px rgba(42, 237, 251, 0.7);
 }
 
+/* unvisited link */
+a:link {
+    color: rgb(42, 237, 251);
+}
+
+/* visited link */
+a:visited {
+    color: rgb(52, 173, 182);
+}
+
+/* mouse over link */
+a:hover {
+    color: rgb(251, 42, 42);
+}
+
+/* selected link */
+a:active {
+    color: rgb(42, 237, 251);
+}
+
 h1 {
     font-weight: 700;
 }
@@ -27,13 +47,18 @@ h2 {
     clear: both;
     display: table;    
 }
+
+#storeContainer {
+    margin-top: 5px;
+}
+
 #tabsContainer{
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
-    padding: 5px;
-    border: 1px solid rgb(42, 237, 251);
-    box-shadow: 0 0 10px rgba(42, 237, 251, 0.8);
+    padding: 0px;
+    border: none;
+    box-shadow: 0 0 10 rgba(42, 237, 251, 0.8);
     margin-top: 5px;
     position: sticky;
 }
@@ -256,7 +281,7 @@ input[type=text] {
     align-content: flex-end;
     height: 23px;
     width: 79px;
-    font-size: 15px;
+    font-size: 13px;
     cursor: pointer;
     text-align: center;
     background-color: #02111b;
