changes so that the twitch cdn will load the images correctly

--- a/public/templates/store.handlebars
+++ b/public/templates/store.handlebars
@@ -3,7 +3,7 @@
         {{#each items}}
         <div class="item">
             <div id="trailImgContainer">
-                <img id="trailImg" src="../img/{{ id }}.png" />
+                <img id="trailImg" src="img/{{ id }}.png" />
                 <div id="purchaseButtonContainer">
                     <button class="purchaseButton" id="{{ id }}" name="inactivated">Use Points</button>
                 </div>
